add log4js etc
