# api/swagger.yaml
@@ -155,6 +155,57 @@ paths:
         405:
           description: "Invalid input"
       x-swagger-router-controller: "Users"
+  /teams/{id}:
+    get:
+      tags:
+      - "users"
+      summary: "Find team by ID"
+      description: "Returns a single team"
+      operationId: "getTeamById"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of team to return"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Team"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Team not found"
+    patch:
+      tags:
+      - "users"
+      summary: "Patch team by ID"
+      description: "Patches a single team"
+      operationId: "updateTeam"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of team to patch"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/Team"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Team not found"    
   /inventory:
     get:
       tags:
@@ -260,6 +311,7 @@ definitions:
     type: "object"
     required:
     - "name"
+    - "createdBy"
     properties:
       id:
         type: "string"
@@ -272,16 +324,10 @@ definitions:
         type: "string"
         format: "date-time"
         example: "2016-08-29T09:12:33.001Z"
-      createBy:
+      createdBy:
         type: "string"
         format: "uuid"
         example: "d290f1ee-6c54-4b01-90e6-d701748f0851"
-      ower:
-        $ref: "#/definitions/User"
-      members:
-        type: "array"
-        items:
-          $ref: "#/definitions/User"
   Task:
     type: "object"
     required:
